PMD tool