@@ -33,7 +33,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.HashMap;
 import java.text.MessageFormat;
-import org.netbeans.modules.web.project.api.WebProjectUtilities;
 
 import org.openide.ErrorManager;
 import org.openide.filesystems.FileObject;
@@ -65,8 +64,8 @@ public final class SourceRoots {
     public static final String PROP_ROOT_PROPERTIES = "rootProperties";    //NOI18N
     public static final String PROP_ROOTS = "roots";   //NOI18N
 
-    public static final String DEFAULT_SOURCE_LABEL = NbBundle.getMessage(WebProjectUtilities.class, "NAME_src.dir");
-    public static final String DEFAULT_TEST_LABEL = NbBundle.getMessage(WebProjectUtilities.class, "NAME_test.src.dir");
+    public static final String DEFAULT_SOURCE_LABEL = NbBundle.getMessage(SourceRoots.class, "NAME_src.dir");
+    public static final String DEFAULT_TEST_LABEL = NbBundle.getMessage(SourceRoots.class, "NAME_test.src.dir");
 
     private final UpdateHelper helper;
     private final PropertyEvaluator evaluator;
@@ -275,7 +274,7 @@ public final class SourceRoots {
                                 int rootIndex = 1;
                                 while (props.containsKey(rootName)) {
                                     rootIndex++;
-                                    rootName = MessageFormat.format(newRootNameTemplate,new Object[]{names[names.length-1],new Integer(rootIndex)});
+                                    rootName = MessageFormat.format(newRootNameTemplate,new Object[]{names[names.length-1], Integer.valueOf(rootIndex)});
                                 }
                                 File f = FileUtil.normalizeFile(new File(URI.create(newRoot.toExternalForm())));
                                 File projDir = FileUtil.toFile(helper.getAntProjectHelper().getProjectDirectory());
